--- a/app/views/ticket_configs/_ticket_client_configs.html.haml
+++ b/app/views/ticket_configs/_ticket_client_configs.html.haml
@@ -96,7 +96,7 @@
 				%legend{:align => "center"}
 					%b SOAP Operation
 				= label_tag 'Select the operation (Port Type|Operation):'
-				= select nil, "soap_ticket_op_id", @wsdl_id_op_map, {}, {:id => "wsdl_operations"}
+				= select nil, "soap_ticket_op_id", @wsdl_id_op_map, {:selected => @selected_soap_op_id}, {:id => "wsdl_operations"}
 				%h4
 					* - Required input
 				- index = -1
@@ -123,7 +123,7 @@
 															- else
 																= label_tag(input['name']) + "  #{get_input_type(input)}"
 														%dd
-															= ((input['type'].instance_of? Hash) ? (select "soap_config_#{index}[#{input['name']}]", nil, input['type']['values']) : (is_sensitive_field?(input['name']) ? (password_field_tag "soap_config_#{index}[#{input['name']}]") : (text_field_tag "soap_config_#{index}[#{input['name']}]")))
+															= ((input['type'].instance_of? Hash) ? (select "soap_config_header_#{index}[#{input['name']}]", nil, input['type']['values']) : (is_sensitive_field?(input['name']) ? (password_field_tag "soap_config_header_#{index}[#{input['name']}]") : (text_field_tag "soap_config_header_#{index}[#{input['name']}]", get_value(input['name'], proper_op_name, @operation, @input_map, true))))
 
 							- if has_operations?(inputs)
 								%fieldset
