Changes to facilitate scan history manager

--- a/app/views/generic/_tabs.html.haml
+++ b/app/views/generic/_tabs.html.haml
@@ -10,6 +10,6 @@
 		%li{ :class => "h #{class_for_tab(:nsc_configs)}"}
 			= link_to '/nsc_configs' do
 				%span.tab Input Modules
-		%li{ :class => "h #{class_for_tab(:general_configurations)}"}
-			= link_to '/general_configurations' do
+		%li{ :class => "h #{class_for_tab(:integer_property)}"}
+			= link_to '/integer_property' do
 				%span.tab Configuration
