--- a/app/views/ticket_configs/_form.html.haml
+++ b/app/views/ticket_configs/_form.html.haml
@@ -75,7 +75,7 @@
 							%div{:class => 'ticket-format invisible'}
 								%fieldset{:style => 'width: auto;'}
 									- first = true
-									- TicketScope.all.each do |ticket_style|
+									- TicketingScope.all.each do |ticket_style|
 										=radio_button_tag 'test', 'yes', first,  {}
 										%b
 											= ticket_style.name
