--- a/app/views/ticket_configs/_ticket_rules.html.haml
+++ b/app/views/ticket_configs/_ticket_rules.html.haml
@@ -70,7 +70,7 @@
         = rule_data.text_area :dns_hostname_pcre_list, {:size => "40x10"}
     %fieldset
       %legend
-        %b NeXpose Site Whitelist/Blacklist
+        %b Nexpose Site Whitelist/Blacklist
       %dl
         = rule_data.label :whitelist, "Whitelist"
         = rule_data.radio_button :site_list_is_whitelist, true, { :checked => true } 
@@ -82,7 +82,7 @@
         = rule_data.text_area :site_list, {:size => "40x10"}
     %fieldset
       %legend
-        %b NeXpose Site PCRE Whitelist/Blacklist
+        %b Nexpose Site PCRE Whitelist/Blacklist
       %dl
         = rule_data.label :whitelist, "Whitelist"
         = rule_data.radio_button :site_pcre_list_is_whitelist, true, { :checked => true }
